# my_first_rust

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_jupyter  build_run.sh  docker-compose.yaml  start_notebooks.command
app/: host_main.py  main.py  test_rust.ipynb
docker_helpers/: Cargo.toml  build_rust.sh
docker_helpers/src/: lib.rs
rust_app/: Cargo.toml  build_install_rust.sh  pyproject.toml
rust_app/src/: lib.rs  module_1.rs
rust_app/src/module_1/: sub_module_1.rs
